# Medusa

./: CMakeLists.txt  README.md
src/: main.c
src/medusa/: compiler.h  safe.h
src/medusa/compiler/: parser.c  parser.h
src/medusa/executor/: codegen.c  codegen.h  insn.h
